# distributed-chat-app

./: CMakeLists.txt  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml
ci/.github/workflows/: build.yml
client/config/: client_config.json
client/include/: Client.h  Encryption.h  UI.h
client/scripts/: start_client.sh
client/src/: Client.cpp  Encryption.cpp  UI.cpp
client/test/: client_test.cpp
config/: client1_config.json  client2_config.json
server/config/: server_config.json
server/include/: ClientHandler.h  Encryption.h  FaultTolerance.h  LoadBalancer.h  Logger.h  Server.h
server/scripts/: start_server.sh
server/src/: ClientHandler.cpp  Encryption.cpp  FaultTolerance.cpp  LoadBalancer.cpp  Logger.cpp  Server.cpp
server/test/: server_test.cpp
shared/: Constants.h  Encryption.cpp  Encryption.h  Message.cpp  Message.h
shared/test/: shared_test.cpp
tests/: integration_test.sh
